[package]
name = "ddsketch"
version = "0.1.0"
edition = "2021"
description = "DuckDB extension for DDSketch quantile sketches"
license = "Apache-2.0"
repository = "https://github.com/cardinalhq/duckdb-ddsketch"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
name = "ddsketch"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "=1.4.3", features = ["vtab-loadable"] }
duckdb-loadable-macros = "=0.1.13"
libduckdb-sys = { version = "=1.4.3", features = ["loadable-extension"] }
sketches-ddsketch = { version = "0.3", features = ["use_serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
bincode = "1.3"
