[package]
name = "ddsketch"
version = "0.2.2"
edition = "2021"
description = "DuckDB extension for DDSketch quantile sketches"
license = "Apache-2.0"
repository = "https://github.com/cardinalhq/duckdb-ddsketch"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
name = "ddsketch"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "=1.4.3", features = ["vtab-loadable", "vscalar"] }
libduckdb-sys = { version = "=1.4.3", features = ["loadable-extension"] }
